--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+ body {
+   font-family: 'Helvetica', sans-serif;
+ }
+
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -27,4 +31,35 @@
 
 .session-links > a:last-child {
   margin-left: 40px;
+}
+
+/* Notes Page */
+
+.notes-index-container {
+  height: 100%;
+  width: 350px;
+}
+
+.notes-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  height: 100px;
+  border-bottom: 1px solid #ececec
+}
+
+.notes-header > * {
+  color: #878787;
+  font-weight: 300;
+}
+
+.notes-header > h1 {
+  font-size: 22px;
+}
+
+.notes-header > h3 {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ababab;
 }
