--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,9 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+
 
  body {
    font-family: 'Helvetica', sans-serif;
@@ -52,7 +54,7 @@
   padding: 20px;
   padding-bottom: 10px;
   height: 100px;
-  border-bottom: 1px solid #ececec
+  border-bottom: 1px solid #ececec;
 }
 
 .notes-header > * {
@@ -93,7 +95,82 @@
   font-weight: 400;
 }
 
+.note-page {
+  border-left: 1px solid #ececec;
+  height: 100vh;
+  width: 100%;
+}
+
+.note-form-header {
+  height: 75px;
+}
+
 .note-form {
+  width: 80%;
+  margin: 20px;
   display: flex;
   flex-direction: column;
+}
+
+.note-form-input {
+  border: none;
+  width: 100%;
+  outline: none;
+}
+
+.note-title-input::placeholder { 
+  color: #2dbe60;
+  font-size: 28px;
+  opacity: 1;
+}
+
+.note-title-input::-ms-input-placeholder {
+  color: #2dbe60;
+}
+
+.note-title-input:-ms-input-placeholder {
+  color: #2dbe60;
+}
+
+.note-title-input {
+  color: #2dbe60;
+  font-size: 28px;
+  font-family: Times, serif;
+  height: 35px;
+}
+
+.note-body-input {
+  height: 300px;
+  width: 100%;
+  vertical-align: 0%;
+  resize: none;
+}
+
+.note-form-submit {
+  width: 100px;
+}
+
+/* Sidebar Nav */
+
+.sidebar-nav {
+  width: 75px;
+  height: 100vh;
+  border-right: 1px solid #ececec;
+  background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  padding: 10px;
+}
+
+.nav-icon {
+  color: #2dbe60;
+  margin: 5px;
+}
+
+.main-sub-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
