--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,10 +15,9 @@
  *= require font-awesome
  */
 
-
- body {
-   font-family: 'Helvetica', sans-serif;
- }
+body {
+  font-family: 'Helvetica', sans-serif;
+}
 
 .main-nav {
   display: flex;
@@ -28,7 +27,7 @@
 
 .main-logo {
   font-size: 24px;
-  color: #2DBE60;
+  color: #2dbe60;
 }
 
 .session-links > a:last-child {
@@ -89,7 +88,8 @@
   margin-bottom: 10px;
 }
 
-.note-updated, .note-body {
+.note-updated,
+.note-body {
   font-size: 12px;
   color: #878787;
   font-weight: 400;
@@ -118,7 +118,7 @@
   outline: none;
 }
 
-.note-title-input::placeholder { 
+.note-title-input::placeholder {
   color: #2dbe60;
   font-size: 28px;
   opacity: 1;
@@ -178,3 +178,4 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
