--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -187,7 +187,6 @@ body {
   overflow: hidden;
   top: 0;
   left: 56px;
-  /* width: 50%; */
   height: 100%;
   background: white;
   border-right: 1px solid #ececec;
@@ -195,10 +194,10 @@ body {
 
 .hide-sidebar-modal {
   width: 0px;
-  transition: all 0.4s ease;
+  transition: all 0.4s ease-in-out;
 }
 
 .open-sidebar-modal {
   width: 250px;
-  transition: all 0.4s ease;
+  transition: all 0.4s ease-in-out;
 }
