--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,7 @@ body {
   margin-left: 40px;
 }
 
-/* Notes Page */
+/* Sidebar */
 
 .notes-page {
   display: flex;
@@ -46,7 +46,7 @@ body {
   width: 350px;
 }
 
-.notes-header {
+.sidebar-header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -56,16 +56,16 @@ body {
   border-bottom: 1px solid #ececec;
 }
 
-.notes-header > * {
+.sidebar-header > * {
   color: #878787;
   font-weight: 300;
 }
 
-.notes-header > h1 {
+.sidebar-header > h1 {
   font-size: 22px;
 }
 
-.notes-header > h3 {
+.sidebar-header > h3 {
   font-size: 14px;
   font-weight: 400;
   color: #ababab;
@@ -188,16 +188,22 @@ body {
   top: 0;
   left: 56px;
   height: 100%;
-  background: white;
-  border-right: 1px solid #ececec;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .hide-sidebar-modal {
   width: 0px;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .open-sidebar-modal {
+  width: 100%;
+  transition: all 0.5s ease-in-out;
+}
+
+.sidebar-index {
   width: 250px;
-  transition: all 0.4s ease-in-out;
+  height: 100%;
+  background-color: white;
+  border-right: 1px solid #ececec;
 }
