--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -43,5 +43,10 @@ table {
 
 a {
 	color: #000;
-  text-decoration: none;
 }
+
+a, a:hover, a:active, a:visited, a:focus {
+    text-decoration:none;
+}
+
+
